--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>rkttu.com</title>
-  <meta http-equiv="refresh" content="0;URL='https://www.notion.so/rkttu/NET-Conf-Korea-by-NET-Dev-a9c16edc7de54dffb35614b220ff8361'" />    
+  <meta http-equiv="refresh" content="0;URL='https://rkttu.notion.site/NET-Conf-Korea-by-NET-Dev-a9c16edc7de54dffb35614b220ff8361'" />    
   <meta name="viewport" content="width=device-width, user-scalable=no" />
 </head>    
 <body> 
-  <p>Redirecting to <a href="https://www.notion.so/rkttu/NET-Conf-Korea-by-NET-Dev-a9c16edc7de54dffb35614b220ff8361">.NET Conf Korea</a> homepage.</p> 
+  <p>Redirecting to <a href="https://rkttu.notion.site/NET-Conf-Korea-by-NET-Dev-a9c16edc7de54dffb35614b220ff8361">.NET Conf Korea</a> homepage.</p> 
 </body>  
 </html>
