--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>rkttu.com</title>
-  <meta http-equiv="refresh" content="0;URL='https://rkttu.notion.site/NET-Conf-2022-x-Seoul-56931dd110424278a9f7cc7188214be3'" />    
+  <title>.NET Conf Korea by .NET Dev</title>
+  <meta http-equiv="refresh" content="0;URL='https://rkttu.notion.site/NET-Conf-2022-x-Seoul-56931dd110424278a9f7cc7188214be3'" />
   <meta name="viewport" content="width=device-width, user-scalable=no" />
-</head>    
-<body> 
-  <p>Redirecting to <a href="https://rkttu.notion.site/NET-Conf-2022-x-Seoul-56931dd110424278a9f7cc7188214be3">.NET Conf Korea</a> homepage.</p> 
-</body>  
+  <meta property="og:title" content=".NET Conf 2022 x Seoul" />
+  <meta property="og:site_name" content=".NET Conf Korea by .NET Dev" />
+  <meta property="og:url" content="https://dotnetconf.kr/" />
+  <meta property="og:description" content=".NET Conf 2022 x Seoul의 발표자 모집, 스폰서 모집이 시작되었습니다." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://github.com/dotnetdev-kr/dotnetconfkr.github.io/raw/gh-pages/billboard-image-20211016.jpg" />
+</head>
+<body>
+  <p>Redirecting to <a href="https://rkttu.notion.site/NET-Conf-2022-x-Seoul-56931dd110424278a9f7cc7188214be3">.NET Conf Korea by .NET Dev</a> homepage.</p>
+</body>
 </html>
