--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>.NET Conf Korea by .NET Dev</title>
-  <meta http-equiv="refresh" content="0;URL='https://rkttu.notion.site/NET-Conf-2022-x-Seoul-56931dd110424278a9f7cc7188214be3'" />
+  <meta http-equiv="refresh" content="0;URL='https://www.dotnetconf.kr/'" />
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <meta property="og:title" content=".NET Conf 2022 x Seoul" />
   <meta property="og:site_name" content=".NET Conf Korea by .NET Dev" />
@@ -12,6 +12,6 @@
   <meta property="og:image" content="https://github.com/dotnetdev-kr/dotnetconfkr.github.io/raw/gh-pages/billboard-image-20211016.jpg" />
 </head>
 <body>
-  <p>Redirecting to <a href="https://rkttu.notion.site/NET-Conf-2022-x-Seoul-56931dd110424278a9f7cc7188214be3">.NET Conf Korea by .NET Dev</a> homepage.</p>
+  <p>Redirecting to <a href="https://www.dotnetconf.kr/">.NET Conf Korea by .NET Dev</a> homepage.</p>
 </body>
 </html>
