--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>.NET Conf Korea by .NET Dev</title>
-  <meta http-equiv="refresh" content="0;URL='https://www.dotnetconf.kr/'" />
+  <meta http-equiv="refresh" content="0;URL='https://www.dotnetconf.kr/?refresh=1'" />
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <meta property="og:title" content=".NET Conf 2022 x Seoul" />
   <meta property="og:site_name" content=".NET Conf Korea by .NET Dev" />
-  <meta property="og:url" content="https://dotnetconf.kr/" />
+  <meta property="og:url" content="https://www.dotnetconf.kr/" />
   <meta property="og:description" content=".NET Conf 2022 x Seoul" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://github.com/dotnetdev-kr/dotnetconfkr.github.io/raw/gh-pages/conference2.jpg" />
 </head>
 <body>
-  <p>Redirecting to <a href="https://www.dotnetconf.kr/">.NET Conf Korea by .NET Dev</a> homepage.</p>
+  <p>Redirecting to <a href="https://www.dotnetconf.kr/?refresh=1">.NET Conf Korea by .NET Dev</a> homepage.</p>
 </body>
 </html>
