Update assets to 2023 ver.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <title>.NET Conf Korea by .NET Dev</title>
   <meta http-equiv="refresh" content="0;URL='https://www.dotnetconf.kr/?refresh=1'" />
   <meta name="viewport" content="width=device-width, user-scalable=no" />
-  <meta property="og:title" content=".NET Conf 2022 x Seoul" />
+  <meta property="og:title" content=".NET Conf 2023 x Seoul" />
   <meta property="og:site_name" content=".NET Conf Korea by .NET Dev" />
   <meta property="og:url" content="https://www.dotnetconf.kr/" />
-  <meta property="og:description" content=".NET Conf 2022 x Seoul" />
+  <meta property="og:description" content=".NET Conf 2023 x Seoul" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://github.com/dotnetdev-kr/dotnetconfkr.github.io/raw/gh-pages/conference2.jpg" />
+  <meta property="og:image" content="https://github.com/dotnetdev-kr/dotnetconfkr.github.io/raw/gh-pages/dotnet_Conf_2023_Seoul_social_media_4427 × 2490-min.png" />
 </head>
 <body>
   <p>Redirecting to <a href="https://www.dotnetconf.kr/?refresh=1">.NET Conf Korea by .NET Dev</a> homepage.</p>
